# ink-stroke-modeler-rs

./: Cargo.toml  build.rs
.cargo/: config.toml
examples/: stroke.rs
