[package]
name = "ink-stroke-modeler-rs"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
build = "build.rs"

[dependencies]
autocxx = "0.26"
cxx = "1"

thiserror = "1"

[build-dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
autocxx-build = "0.26"
cmake = "0.1"
path-slash = "0.2"

[dev-dependencies]
anyhow = "1.0.75"
svg = "0.14.0"

